Expriments can be run from notebooks, more options to control sbatch/screen/CPUs. Added Primates data

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 
 *~
 Animation/Experiment/*
+*/.ipynb_checkpoints/
 Animation/.snakemake
 DataEmpirical/*/singlegene_alignments
 DataEmpirical/*/gblocks
