--- a/DataEmpirical/config.yaml
+++ b/DataEmpirical/config.yaml
@@ -1,10 +1,10 @@
 INFERENCE_REPLICATE:
   CHAINS: [1, 2]
-  MODELS: [node, aa, nodeomega]
+  MODELS: [node]
   POLYMORPHISM: [false]
 INFERENCE:
-  POINTS: 1000
+  POINTS: 4000
   PRECISION: 12
-  NCAT: 30
+  NCAT: 50
 PLOT:
-  BURN_IN: 40
+  BURN_IN: 300
